--- a/assets/base.scss
+++ b/assets/base.scss
@@ -1,31 +1,8 @@
-@media screen and (min-width: 600px) {
-  .flex-0 {
-    flex: 0;
-  }
-  .card-height {
-    height: 280px;
-  }
-  .remove-product-button {
-    right: -10px;
-  }
-}
-@media screen and (max-width: 600px) {
-  .ellipsis-third-line {
-    -webkit-line-clamp: 3 !important;
-  }
-  .remove-product-button {
-    right: -35px;
-  }
-}
-.ellipsis {
-  -webkit-line-clamp: 2;
+.ellipsis-second-line {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 0;
-}
-.remove-product-button {
-  position: absolute;
-  top: -10px;
 }
